--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -198,7 +198,7 @@ fields in the SAM format:
     regarded to be unset.
   \end{itemize}
 \item {\sf RNAME}: Reference sequence NAME of the alignment. If {\tt
-    @SQ} header lines are present, {\tt RNAME} (if not `*') must be
+    @SQ} header lines are present, {\sf RNAME} (if not `*') must be
   present in one of the {\tt SQ-SN} tag. An unmapped fragment without
   coordinate has a `*' at this field. However, an unmapped fragment may
   also have an ordinary coordinate such that it can be placed at a
