--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -9,7 +9,7 @@
 
 \makeindex
 
-\title{The SAM Format Specification (v1.3 draft)}
+\title{The SAM Format Specification (v1.3 r622)}
 \author{The SAM Format Specification Working Group}
 \begin{document}
 
@@ -19,7 +19,7 @@
 \section{The SAM Format Specification}
 SAM stands for Sequence Alignment/Map format. It is a TAB-delimited text
 format consisting of a header section, which is optional, and an
-alignment section. If present, the header must be prior the
+alignment section. If present, the header must be prior to the
 alignments. Header lines start with `{\tt @}', while alignment lines do
 not. Each alignment line has 11 mandatory fields for essential alignment
 information such as mapping position, and variable number of optional
